# hyprparser

./: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
.github/: CODEOWNERS
src/: lib.rs
tests/: test_config_0.conf  test_config_1.conf
